...
    case 'market':
    case 'rehome':
    case 'buy':
    case 'sell':
      return HuddlCategory.marketplace;
    case 'groups':
    case 'group':
      return HuddlCategory.groups;
    case 'meetups':
    case 'meetup':
      return HuddlCategory.meetups;
    case 'events':
    case 'event':
...
